--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -11,11 +11,14 @@ apispec==1.0.0            # via responder
 apistar==0.6.0            # via responder
 appnope==0.1.0            # via ipython
 asgiref==2.3.2            # via responder
+asn1crypto==0.24.0        # via cryptography
 async-timeout==3.0.1      # via asgiref
 backcall==0.1.0           # via ipython
 certifi==2018.11.29       # via requests
+cffi==1.12.2              # via cryptography
 chardet==3.0.4            # via requests, responder
 click==7.0                # via apistar, flask, pip-tools, uvicorn
+cryptography==2.6.1       # via pyopenssl, requests
 dataset==1.1.2
 decorator==4.3.2          # via ipython, traitlets
 django==2.1.7
@@ -47,19 +50,21 @@ pip-tools==3.4.0
 promise==2.2.1            # via graphene, graphql-core, graphql-relay, graphql-server-core
 prompt-toolkit==2.0.9     # via ipython
 ptyprocess==0.6.0         # via pexpect
+pycparser==2.19           # via cffi
 pygments==2.3.1
+pyopenssl==19.0.0         # via requests
 python-dateutil==2.8.0    # via alembic, pandas
 python-editor==1.0.4      # via alembic
 python-multipart==0.0.5   # via responder
 pytz==2018.9              # via django, pandas
 pyyaml==3.13
 requests-toolbelt==0.9.1  # via responder
-requests==2.21.0
+requests[security]==2.21.0
 responder==1.3.0
 rfc3986==1.2.0            # via responder
 rx==1.6.1                 # via graphql-core
 scipy==1.2.1
-six==1.12.0               # via dataset, graphene, graphql-core, graphql-relay, pip-tools, promise, prompt-toolkit, python-dateutil, python-multipart, traitlets
+six==1.12.0               # via cryptography, dataset, graphene, graphql-core, graphql-relay, pip-tools, promise, prompt-toolkit, pyopenssl, python-dateutil, python-multipart, traitlets
 sqlalchemy==1.3.0         # via alembic, dataset
 starlette==0.10.7         # via responder
 toml==0.10.0
