Add psycopg2 (for dataset)

--- a/python/requirements.in
+++ b/python/requirements.in
@@ -11,6 +11,7 @@ numpy
 pandas
 pillow
 pip-tools
+psycopg2 --no-binary psycopg2  # Required to use dataset with postgres
 pygments
 pyyaml
 requests[security]
