--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -49,6 +49,8 @@ pexpect==4.6.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==5.4.1
 pip-tools==3.4.0
+pp-ez==0.2.0
+pprintpp==0.4.0
 promise==2.2.1            # via graphene, graphql-core, graphql-relay, graphql-server-core
 prompt-toolkit==2.0.9     # via ipython
 psycopg2==2.7.7
