--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -25,6 +25,7 @@ dataset==1.1.2
 decorator==4.3.2          # via ipython, traitlets
 django==2.1.7
 docopt==0.6.2             # via responder
+fancycompleter==0.8       # via pdbpp
 flask==1.0.2
 graphene==2.1.3           # via responder
 graphql-core==2.1         # via graphene, graphql-relay, graphql-server-core
@@ -45,6 +46,7 @@ numpy==1.16.2
 pandas==0.24.1
 parse==1.11.1             # via responder
 parso==0.3.4              # via jedi
+pdbpp==0.9.7
 pexpect==4.6.0            # via ipython
 pickleshare==0.7.5        # via ipython
 pillow==5.4.1
@@ -82,3 +84,4 @@ wcwidth==0.1.7            # via prompt-toolkit
 websockets==7.0           # via uvicorn
 werkzeug==0.14.1          # via flask
 whitenoise==4.1.2         # via responder
+wmctrl==0.3               # via pdbpp
