--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -15,6 +15,8 @@ appnope==0.1.0            # via ipython
 asgiref==2.3.2            # via responder
 asn1crypto==0.24.0        # via cryptography
 async-timeout==3.0.1      # via asgiref
+atomicwrites==1.3.0       # via pytest
+attrs==19.1.0             # via pytest
 backcall==0.1.0           # via ipython
 certifi==2018.11.29       # via requests
 cffi==1.12.2              # via cryptography
@@ -25,7 +27,9 @@ dataset==1.1.2
 decorator==4.3.2          # via ipython, traitlets
 django==2.1.7
 docopt==0.6.2
+entrypoints==0.3          # via flake8
 fancycompleter==0.8       # via pdbpp
+flake8==3.7.7
 flask==1.0.2
 graphene==2.1.3           # via responder
 graphql-core==2.1         # via graphene, graphql-relay, graphql-server-core
@@ -42,6 +46,8 @@ jinja2==2.10              # via apistar, flask, responder
 mako==1.0.7               # via alembic
 markupsafe==1.1.1         # via jinja2, mako
 marshmallow==2.18.1       # via responder
+mccabe==0.6.1             # via flake8
+more-itertools==6.0.0     # via pytest
 numpy==1.16.2
 pandas==0.24.1
 parse==1.11.1             # via responder
@@ -53,15 +59,20 @@ pillow==5.4.1
 pip-tools==3.4.0
 pipdeptree==0.13.2
 pipsi==0.9
+pluggy==0.9.0             # via pytest
 pp-ez==0.2.0
 pprintpp==0.4.0
 promise==2.2.1            # via graphene, graphql-core, graphql-relay, graphql-server-core
 prompt-toolkit==2.0.9     # via ipython
 psycopg2==2.7.7
 ptyprocess==0.6.0         # via pexpect
+py==1.8.0                 # via pytest
+pycodestyle==2.5.0        # via flake8
 pycparser==2.19           # via cffi
+pyflakes==2.1.1           # via flake8
 pygments==2.3.1
 pyopenssl==19.0.0         # via requests
+pytest==4.3.0
 python-dateutil==2.8.0    # via alembic, pandas
 python-editor==1.0.4      # via alembic
 python-multipart==0.0.5   # via responder
@@ -74,7 +85,7 @@ rfc3986==1.2.0            # via responder
 rx==1.6.1                 # via graphql-core
 scipy==1.2.1
 sh==1.12.14
-six==1.12.0               # via cryptography, dataset, graphene, graphql-core, graphql-relay, pip-tools, promise, prompt-toolkit, pyopenssl, python-dateutil, python-multipart, traitlets
+six==1.12.0               # via cryptography, dataset, graphene, graphql-core, graphql-relay, pip-tools, promise, prompt-toolkit, pyopenssl, pytest, python-dateutil, python-multipart, traitlets
 snakeviz==1.0.0
 sqlalchemy==1.3.0         # via alembic, dataset
 sqlparse==0.2.4
